@@ -1,7 +1,7 @@
 cmake_minimum_required ( VERSION 3.19 )
 
 file (
-	COPY "${CMAKE_BINARY_DIR}/.clang-format"
+	COPY "${DGM_BINARY_DIR}/.clang-format"
 	DESTINATION "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
